<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <ImageView
        android:id="@+id/map"
        android:layout_width="393dp"
        android:layout_height="355dp"
        android:contentDescription="@string/map"
        app:layout_constraintBottom_toTopOf="@id/btn_lyon_center_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rec_center_header"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/map" />

    <ImageButton
        android:id="@+id/btn_lyon_center"
        android:layout_width="39dp"
        android:layout_height="47dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/lyonmarker"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="@+id/map"
        app:layout_constraintVertical_bias="0.336"
        app:srcCompat="@drawable/small_marker"
        tools:ignore="DuplicateIds" />

    <ImageButton
        android:id="@+id/btn_village_center"
        android:layout_width="39dp"
        android:layout_height="48dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/villagemarker"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/map"
        app:layout_constraintVertical_bias="0.271"
        app:srcCompat="@drawable/small_marker"
        tools:ignore="DuplicateIds" />

    <ImageButton
        android:id="@+id/btn_aquatics"
        android:layout_width="39dp"
        android:layout_height="48dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/aquamarker"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="@+id/map"
        app:layout_constraintVertical_bias="0.405"
        app:srcCompat="@drawable/small_marker"
        tools:ignore="DuplicateIds" />


    <Button
        android:id="@+id/btn_my_reservations"
        android:layout_width="171dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_login"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/reservations"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_my_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_my_profile"
        android:layout_width="171dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:background="@drawable/btn_login"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/btn_lyon_center_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/rec_center_header"
        android:layout_width="346dp"
        android:layout_height="35dp"
        android:text="@string/select_a_rec_center"
        android:textAlignment="center"
        android:textColor="@color/gray_trojan"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_village_center_two"
        android:layout_width="316dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:backgroundTint="#343A40"
        android:text="@string/usc_village_rec_center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_aquatics_two"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_lyon_center_two"
        android:layout_width="316dp"
        android:layout_height="70dp"
        android:layout_marginTop="9dp"
        android:layout_weight="1"
        android:backgroundTint="#343A40"
        android:text="@string/lyon_center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_aquatics_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_aquatics_two"
        android:layout_width="316dp"
        android:layout_height="70dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:backgroundTint="#343A40"
        android:text="@string/uytengsu_aquatics_center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_village_center_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_lyon_center_two"
        app:layout_constraintVertical_bias="0.152" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="map"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btn_my_reservations" />



</androidx.constraintlayout.widget.ConstraintLayout>